@@ -11,7 +11,12 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.logging.Logger;
@@ -23,37 +28,65 @@ public final class WikiApiRequest {
     private static final Logger LOGGER = Logger.
             getLogger(WikiApiRequest.class.getName());
 
+//    public static List<Word> getDescriptionByTitle(final String title) {
+//        ObjectMapper objectMapper = new ObjectMapper();
+//        List<Word> result = new ArrayList<>();
+//        String jsonResponse = "";
+//        try {
+//            String apiUrl =
+//                    "https://en.wikipedia.org/w/api.php?action"
+//                            + "=query&list=search&srsearch="
+//                            + title + "&srwhat=text&format=json";
+//            URI url = new URI(apiUrl);
+//            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+//            conn.setRequestMethod("GET");
+//            int responseCode = conn.getResponseCode();
+//            if (responseCode == HttpStatus.OK.value()) {
+//                jsonResponse = getResponse(conn);
+//                List<DescriptionGetApiSearchResponse> words =
+//                        getApiSearchResponsesWords(jsonResponse, objectMapper);
+//                result = words.stream()
+//                        .map(WikiApiRequest::mapResponseToModel)
+//                        .toList();
+//
+//            } else {
+//                LOGGER.info("Error with response code");
+//            }
+//            conn.disconnect();
+//        } catch (Exception e) {
+//            LOGGER.info(e.getMessage());
+//        }
+//        return result;
+//    }
+
     public static List<Word> getDescriptionByTitle(final String title) {
         ObjectMapper objectMapper = new ObjectMapper();
+
         List<Word> result = new ArrayList<>();
-        String jsonResponse = "";
+        String apiUrl = "https://en.wikipedia.org/w/api.php?action=query&list=search&srsearch=" + title + "&srwhat=text&format=json";
+
         try {
-            String apiUrl =
-                    "https://en.wikipedia.org/w/api.php?action"
-                            + "=query&list=search&srsearch="
-                            + title + "&srwhat=text&format=json";
-            URL url = new URL(apiUrl);
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("GET");
-            int responseCode = conn.getResponseCode();
-            if (responseCode == HttpStatus.OK.value()) {
-                jsonResponse = getResponse(conn);
-                List<DescriptionGetApiSearchResponse> words =
-                        getApiSearchResponsesWords(jsonResponse, objectMapper);
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(apiUrl))
+                    .GET()
+                    .build();
+
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            if (response.statusCode() == 200) {
+                String jsonResponse = response.body();
+                List<DescriptionGetApiSearchResponse> words = getApiSearchResponsesWords(jsonResponse, objectMapper);
                 result = words.stream()
                         .map(WikiApiRequest::mapResponseToModel)
                         .toList();
-
             } else {
-                LOGGER.info("Error with response code");
+                LOGGER.info("Error with response code: " + response.statusCode());
             }
-            conn.disconnect();
-        } catch (Exception e) {
-            LOGGER.info(e.getMessage());
+        } catch (IOException | InterruptedException e) {
+            LOGGER.info("Error: " + e.getMessage());
         }
         return result;
     }
-
     private static String getResponse(final HttpURLConnection conn)
             throws IOException {
         try (BufferedReader reader =
@@ -100,46 +133,84 @@ public final class WikiApiRequest {
         return word;
     }
 
-    public static Word getDescriptionByPageId(final long id) throws IOException {
+    public static Word getDescriptionByPageId(final long id) throws IOException, URISyntaxException {
+//        String id1 = Long.toString(id);
+//        String apiUrl =
+//                "https://en.wikipedia.org/w/api.php?action"
+//                        + "=query&prop=extracts&format=json&pageids="
+//                        + id1;
+//        URI url = new URI(apiUrl);
+//        HttpURLConnection con = (HttpURLConnection) url.openConnection();
+//        con.setRequestMethod("GET");
+//        BufferedReader in =
+//                new BufferedReader(new InputStreamReader(con.getInputStream()));
+//        String inputLine;
+//        StringBuilder content = new StringBuilder();
+//        while ((inputLine = in.readLine()) != null) {
+//            content.append(inputLine);
+//        }
+//        in.close();
+//        con.disconnect();
+//        JSONObject response = new JSONObject(content.toString());
+//        JSONObject pages = response.getJSONObject("query").getJSONObject("pages");
+//        JSONObject page = pages.getJSONObject(id1);
+//
+//        String title = page.has("title") ? page.getString("title") : null;
+//
+//        String extract = page.has("extract") ? page.getString("extract") : null;
+//
+//        if (extract != null) {
+//            int index = extract.indexOf("<h2>");
+//            if (index != -1) {
+//                extract = extract.substring(0, index);
+//            }
+//            extract = extract.replaceAll("<[^>]*>", "");
+//            extract = extract.replace("\n", "");
+//        }
+//
+//        Word word = new Word();
+//        word.setTitle(title);
+//        word.setDescription(extract != null ? extract.trim() : null);
+//        return word;
+//    }
         String id1 = Long.toString(id);
-        String apiUrl =
-                "https://en.wikipedia.org/w/api.php?action"
-                        + "=query&prop=extracts&format=json&pageids="
-                        + id1;
-        URL url = new URL(apiUrl);
-        HttpURLConnection con = (HttpURLConnection) url.openConnection();
-        con.setRequestMethod("GET");
-        BufferedReader in =
-                new BufferedReader(new InputStreamReader(con.getInputStream()));
-        String inputLine;
-        StringBuilder content = new StringBuilder();
-        while ((inputLine = in.readLine()) != null) {
-            content.append(inputLine);
-        }
-        in.close();
-        con.disconnect();
-        JSONObject response = new JSONObject(content.toString());
-        JSONObject pages = response.getJSONObject("query").getJSONObject("pages");
-        JSONObject page = pages.getJSONObject(id1);
+        String apiUrl = "https://en.wikipedia.org/w/api.php?action=query&prop=extracts&format=json&pageids=" + id1;
+        URI uri = URI.create(apiUrl);
 
-        String title = page.has("title") ? page.getString("title") : null;
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(uri)
+                .GET()
+                .build();
 
-        String extract = page.has("extract") ? page.getString("extract") : null;
+        try {
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            JSONObject jsonResponse = new JSONObject(response.body());
+            JSONObject pages = jsonResponse.getJSONObject("query").getJSONObject("pages");
+            JSONObject page = pages.getJSONObject(id1);
 
-        if (extract != null) {
-            int index = extract.indexOf("<h2>");
-            if (index != -1) {
-                extract = extract.substring(0, index);
+            String title = page.optString("title", null);
+            String extract = page.optString("extract", null);
+
+            if (extract != null) {
+                int index = extract.indexOf("<h2>");
+                if (index != -1) {
+                    extract = extract.substring(0, index);
+                }
+                extract = extract.replaceAll("<[^>]*>", "");
+                extract = extract.replace("\n", "");
             }
-            extract = extract.replaceAll("<[^>]*>", "");
-            extract = extract.replace("\n", "");
+
+            Word word = new Word();
+            word.setTitle(title);
+            word.setDescription(extract != null ? extract.trim() : null);
+            return word;
+        } catch (InterruptedException e) {
+            // Обработка прерывания
+            e.printStackTrace();
+            // Можно выбросить исключение или вернуть null, в зависимости от требований вашего приложения
+            return null;
         }
-
-        Word word = new Word();
-        word.setTitle(title);
-        word.setDescription(extract != null ? extract.trim() : null);
-        return word;
     }
-
 
 }
